# claude-skill-discipline

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  README.md  pyproject.toml
.coily/: coily.yaml
docs/: FEATURES.md  authoring-walkthrough.md  handbook.md
examples/: categories.yaml  pre-commit-config.yaml
hooks/: check_commit_closes_issue.py  check_dead_links.py  validate_skills.py
src/claude_skill_discipline/: check_commit_closes_issue.py  check_dead_links.py  validate_skills.py
src/claude_skill_discipline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
