[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-skill-discipline"
version = "0.2.0"
description = "Pre-commit hooks for Claude Code skill repositories: skill-conventions, dead-cross-links, commit-closes-issue."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
keywords = ["claude", "claude-code", "skills", "pre-commit", "linter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/coilysiren/claude-skill-discipline"
Issues = "https://github.com/coilysiren/claude-skill-discipline/issues"

[project.scripts]
validate-skills = "claude_skill_discipline.validate_skills:main"
check-dead-links = "claude_skill_discipline.check_dead_links:main"
check-commit-closes-issue = "claude_skill_discipline.check_commit_closes_issue:main"

[tool.setuptools.packages.find]
where = ["src"]
